--- a/index.html
+++ b/index.html
@@ -7,16 +7,55 @@
     <title>html-css-bootstrap-freelancer</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
     <!-- HEADER -->
+    <header>
+        <div class="container-fluid pt-4 pb-4">
+            <div class="container">
+                <div class="row align-items-center">
+                    <!-- column -->
+                    <div class="col-sm-10 col-md-6">
+                        <h1 class="title ">START BOOTSTRAP</h1>
+                    </div>
+                    <!-- column -->
+                    <div class="col-sm-2 col-md-6 d-flex justify-content-end">
+                        <div class="d-sm-inline-block d-md-none">
+                            <i class="fas fa-bars"></i>
+                        </div>
+                        <!-- per dispositivi >= tablet -->
+                        <nav class=" menu d-sm-none d-md-inline-block">
+                            <ul>
+                                <li>
+                                   <a href="#">link</a>
+                                </li>
+                                <li>
+                                    <a href="#">link</a>
+                                </li>
+                                <li>
+                                    <a href="#">link</a>
+                                </li>
+                            </ul>
+                        </nav>
+                    </div>
+                </div>
+            </div>
+            
+        </div>
+    </header>
     <!-- END HEADER -->
 
     <!-- MAIN -->
+    <main>
+
+    </main>
     <!-- END MAIN -->
 
     <!-- FOOTER -->
+    <footer>
+
+    </footer>
     <!-- END FOOTER -->
-    
 </body>
 </html>
