--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <div class="row align-items-center">
                     <!-- column -->
                     <div class="col-sm-10 col-md-6">
-                        <h1 class="title ">START BOOTSTRAP</h1>
+                        <h2 class="title ">START BOOTSTRAP</h2>
                     </div>
                     <!-- column -->
                     <div class="col-sm-2 col-md-6 d-flex justify-content-end">
@@ -41,14 +41,29 @@
                     </div>
                 </div>
             </div>
-            
         </div>
     </header>
     <!-- END HEADER -->
 
     <!-- MAIN -->
     <main>
+        <section class="user">
+            <div class="container d-flex align-items-center flex-column">
 
+                <div class="user-img">
+                    <img src="bootstrap_freelancer/img/avatar.svg" alt="user">
+                </div>
+                <!-- title -->
+                <div class="title">
+                    <h1>START BOOTSTRAP</h1>
+                </div>
+                <!-- description -->
+                <div>
+                    GRAPHIC ARTIST - WEB DESIGNER - ILLUSTRATOR
+                </div>
+            </div>
+        </section>
+        
     </main>
     <!-- END MAIN -->
 
