--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                             <i class="fas fa-bars"></i>
                         </div>
                         <!-- per dispositivi >= tablet -->
-                        <nav class=" menu d-sm-none d-md-inline-block">
+                        <nav class="menu d-sm-none d-md-inline-block">
                             <ul>
                                 <li>
                                    <a href="#">link</a>
@@ -60,6 +60,100 @@
                 <!-- description -->
                 <div>
                     GRAPHIC ARTIST - WEB DESIGNER - ILLUSTRATOR
+                </div>
+            </div>
+        </section>
+
+        <section class="portfolio">
+            <div class="container">
+                <!-- title portfolio -->
+                <div class="d-flex justify-content-center">
+                    <h2 class="">PORTFOLIO</h2>
+                </div>
+
+                <!-- img -->
+                <div class="row">
+                    <!-- single img -->
+                    <div class="col-sm-12 col-md-6 col-lg-4">
+                        <img src="bootstrap_freelancer/img/cabin.png" alt="">
+                    </div>
+                    <!-- single img -->
+                    <div class="col-sm-12 col-md-6 col-lg-4">
+                        <img src="bootstrap_freelancer/img/cabin.png" alt="">
+                    </div>
+                    <!-- single img -->
+                    <div class="col-sm-12 col-md-6 col-lg-4">
+                        <img src="bootstrap_freelancer/img/cabin.png" alt="">
+                    </div>
+                    <!-- single img -->
+                    <div class="col-sm-12 col-md-6 col-lg-4">
+                        <img src="bootstrap_freelancer/img/cabin.png" alt="">
+                    </div>
+                    <!-- single img -->
+                    <div class="col-sm-12 col-md-6 col-lg-4">
+                        <img src="bootstrap_freelancer/img/cabin.png" alt="">
+                    </div>
+                    <!-- single img -->
+                    <div class="col-sm-12 col-md-6 col-lg-4">
+                        <img src="bootstrap_freelancer/img/cabin.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="about">
+            <div class="container d-flex flex-column align-items-center">
+                <!-- title about -->
+                <div>
+                    <h2>ABOUT</h2>
+                </div>
+
+                <div class="row">
+                    <!-- col -->
+                    <div class="col-sm-12 col-md-6">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro, rem aspernatur neque ipsum doloremque, harum facere eligendi deleniti ea omnis libero incidunt nesciunt exercitationem! Ex animi blanditiis ipsam aut voluptatibus?
+                    </div>
+                    <!-- col -->
+                    <div class="col-sm-12 col-md-6">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro, rem aspernatur neque ipsum doloremque, harum facere eligendi deleniti ea omnis libero incidunt nesciunt exercitationem! Ex animi blanditiis ipsam aut voluptatibus?
+                    </div>
+                </div>
+                <!-- button dowload -->
+                <div>
+                    DOWLOAD
+                </div>
+            </div>
+        </section>
+
+        <section>
+            <div class="container">
+                <div>
+                    <h2>CONTACT ME</h2>
+                </div>
+
+                <div class="row flex-column">
+
+                    <div class="col-sm-12">
+                        <div>Name</div>
+                        <hr>
+                    </div>
+                    <div class="col-sm-12">
+                        <div>Email address</div>
+                        <hr>
+                    </div>
+                    <div class="col-sm-12">
+                        <div>Phone number</div>
+                        <hr>
+                    </div>
+                    <div class="col-sm-12">
+                        <div class="pb-5">message</div>
+                        <hr>
+                    </div>
+                    <!-- button send -->
+                    <div>
+                        send
+                    </div>
+                    
                 </div>
             </div>
         </section>
