--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
                         <nav class="menu d-sm-none d-md-inline-block">
                             <ul>
                                 <li>
-                                   <a href="#">link</a>
+                                   <a href="#">PORTFOLIO</a>
                                 </li>
                                 <li>
-                                    <a href="#">link</a>
+                                    <a href="#">ABOUT</a>
                                 </li>
                                 <li>
-                                    <a href="#">link</a>
+                                    <a href="#">CONTACT</a>
                                 </li>
                             </ul>
                         </nav>
@@ -48,14 +48,20 @@
     <!-- MAIN -->
     <main>
         <section class="user">
-            <div class="container p-5 d-flex align-items-center flex-column">
+            <div class="container d-flex align-items-center flex-column">
 
                 <div class="user-img">
                     <img src="bootstrap_freelancer/img/avatar.svg" alt="user">
                 </div>
                 <!-- title -->
-                <div class="title">
+                <div class="title pt-3">
                     <h1>START BOOTSTRAP</h1>
+                </div>
+                <!-- star -->
+                <div class="star d-flex justify-content-center align-items-center p-3">
+                    <div class="hr_star c_bc_w"></div>
+                    <i class="fas fa-star px-2"></i>
+                    <div class="hr_star c_bc_w"></div>
                 </div>
                 <!-- description -->
                 <div>
@@ -64,68 +70,84 @@
             </div>
         </section>
 
-        <section class="portfolio">
-            <div class="container p-5">
+        <section class="portfolio m-auto">
+            <div class="container-fluid">
                 <!-- title portfolio -->
-                <div class="d-flex justify-content-center p-5">
+                <div class="text-center">
                     <h2 class="">PORTFOLIO</h2>
                 </div>
 
+                <!-- star -->
+                <div class="star d-flex justify-content-center align-items-center p-3">
+                    <div class="hr_star c_bc_b"></div>
+                    <i class="fas fa-star px-2"></i>
+                    <div class="hr_star c_bc_b"></div>
+                </div>
+
                 <!-- img -->
-                <div class="row gy-3">
+                <div class="row gy-4 row-cols-sm-1 row-cols-md-2 row-cols-lg-3">
                     <!-- single img -->
-                    <div class="col-sm-12 col-md-6 col-lg-4">
-                        <img src="bootstrap_freelancer/img/cabin.png" alt="">
+                    <div class="col">
+                        <img src="bootstrap_freelancer/img/cabin.png" alt="img-1-portfolio">
                     </div>
                     <!-- single img -->
-                    <div class="col-sm-12 col-md-6 col-lg-4">
-                        <img src="bootstrap_freelancer/img/cabin.png" alt="">
+                    <div class="col">
+                        <img src="bootstrap_freelancer/img/cake.png" alt="img-2-portfolio">
                     </div>
                     <!-- single img -->
-                    <div class="col-sm-12 col-md-6 col-lg-4">
-                        <img src="bootstrap_freelancer/img/cabin.png" alt="">
+                    <div class="col">
+                        <img src="bootstrap_freelancer/img/circus.png" alt="img-3-portfolio">
                     </div>
                     <!-- single img -->
-                    <div class="col-sm-12 col-md-6 col-lg-4">
-                        <img src="bootstrap_freelancer/img/cabin.png" alt="">
+                    <div class="col">
+                        <img src="bootstrap_freelancer/img/game.png" alt="img-4-portfolio">
                     </div>
                     <!-- single img -->
-                    <div class="col-sm-12 col-md-6 col-lg-4">
-                        <img src="bootstrap_freelancer/img/cabin.png" alt="">
+                    <div class="col">
+                        <img src="bootstrap_freelancer/img/safe.png" alt="img-5-portfolio">
                     </div>
                     <!-- single img -->
-                    <div class="col-sm-12 col-md-6 col-lg-4">
-                        <img src="bootstrap_freelancer/img/cabin.png" alt="">
+                    <div class="col">
+                        <img src="bootstrap_freelancer/img/submarine.png" alt="img-6-portfolio">
                     </div>
                 </div>
             </div>
         </section>
 
-        <section class="about p-5">
-            <div class="container d-flex flex-column align-items-center">
-                <!-- title about -->
-                <div>
-                    <h2>ABOUT</h2>
-                </div>
-
-                <div class="row">
-                    <!-- col -->
-                    <div class="col-sm-12 col-md-6">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro, rem aspernatur neque ipsum doloremque, harum facere eligendi deleniti ea omnis libero incidunt nesciunt exercitationem! Ex animi blanditiis ipsam aut voluptatibus?
+        <section class="about">
+            <div class="container-about m-auto">
+                <div class="container d-flex flex-column align-items-center">
+                    <!-- title about -->
+                    <div>
+                        <h2>ABOUT</h2>
                     </div>
-                    <!-- col -->
-                    <div class="col-sm-12 col-md-6">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro, rem aspernatur neque ipsum doloremque, harum facere eligendi deleniti ea omnis libero incidunt nesciunt exercitationem! Ex animi blanditiis ipsam aut voluptatibus?
+    
+                    <!-- star -->
+                    <div class="star d-flex justify-content-center align-items-center p-3">
+                        <div class="hr_star c_bc_w"></div>
+                        <i class="fas fa-star px-2"></i>
+                        <div class="hr_star c_bc_w"></div>
                     </div>
-                </div>
-                <!-- button dowload -->
-                <div class="pt-3">
-                    DOWLOAD
+    
+                    <div class="row">
+                        <!-- col -->
+                        <div class="col-sm-12 col-md-6">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro, rem aspernatur neque ipsum doloremque, harum facere eligendi deleniti ea omnis libero incidunt nesciunt exercitationem! Ex animi blanditiis ipsam aut voluptatibus?
+                        </div>
+                        <!-- col -->
+                        <div class="col-sm-12 col-md-6 gy-sm-4 gy-md-0">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro, rem aspernatur neque ipsum doloremque, harum facere eligendi deleniti ea omnis libero incidunt nesciunt exercitationem! Ex animi blanditiis ipsam aut voluptatibus?
+                        </div>
+                    </div>
+                    <!-- button dowload -->
+                    <div class="pt-3">
+                        <button type="button" class="btn"><i class="fas fa-download"></i> Dowload</button>
+                    </div>
                 </div>
             </div>
         </section>
 
-        <section class="p-5">
+        <section>
             <div class="container">
                 <div>
                     <h2>CONTACT ME</h2>
