--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                             <i class="fas fa-bars"></i>
                         </div>
                         <!-- per dispositivi >= tablet -->
-                        <nav class="menu d-sm-none d-md-inline-block">
+                        <nav class="menu d-xs-none d-sm-none d-md-inline-block">
                             <ul>
                                 <li>
                                    <a href="#">PORTFOLIO</a>
@@ -147,7 +147,7 @@
             </div>
         </section>
 
-        <section>
+        <section class="contact">
             <div class="container">
                 <div>
                     <h2>CONTACT ME</h2>
@@ -166,11 +166,11 @@
                         <label for="phone" class="form-label"></label>
                         <input type="tel" class="form-control" id="phone" placeholder="Phone Number">
                     </div>
-                    <div class="mb-3">
+                    <div class="mb-3 ">
                         <label for="mex" class="form-label"></label>
-                        <textarea class="form-control" id="mex" rows="3" placeholder="Message"></textarea>
+                        <input type="text"  class="form-control text_area" id="mex" rows="3" placeholder="Message">
                     </div>
-                    <button type="submit" class="btn btn-primary">Submit</button>
+                    <button type="submit" class="btn btn-green">Send</button>
                   </form>
 
             </div>
@@ -181,34 +181,34 @@
     <!-- FOOTER -->
     <footer>
 
-        <section class="references p-3">
+        <section class="references p-5">
             <div class="container">
                 <div class="row text-center">
 
-                    <div class="col-sm-12 col-md-4">
+                    <div class="col-sm-12 col-md-4 gy-4">
                         <h3>LOCATION</h3>
                         <P>2215 John Daniel Drive, clark, MO 54243</P>
                     </div>
 
-                    <div class="col-sm-12 col-md-4">
+                    <div class="col-sm-12 col-md-4 gy-4">
                         <h3 class="text-center">AROUND THE WEB</h3>
                         <ul class="p-0">
                             <li>
                                 <div class="social"><i class="fab fa-facebook-f"></i></div>
                             </li>
                             <li>
-                                <div class="social"><i class="fab fa-facebook-f"></i></div>
+                                <div class="social"><i class="fab fa-google-plus-g"></i></div>
                             </li>
                             <li>
-                                <div class="social"><i class="fab fa-facebook-f"></i></div>
+                                <div class="social"><i class="fab fa-twitter"></i></div>
                             </li>
                             <li>
-                                <div class="social"><i class="fab fa-facebook-f"></i></div>
+                                <div class="social"><i class="fab fa-linkedin-in"></i></div>
                             </li>
                         </ul>
                     </div>
 
-                    <div class="col-sm-12 col-md-4">
+                    <div class="col-sm-12 col-md-4 gy-4">
                         <h3>LOCATION</h3>
                         <P>2215 John Daniel Drive, clark, MO 54243</P>
                     </div>
@@ -217,8 +217,8 @@
             </div>
         </section>
 
-        <section class="copyright text-center p-2">
-            <p> copyright Your Website 2019</p>
+        <section class="copyright text-center p-4"> 
+            <p> copyright © Your Website 2019</p>
         </section>
         
     </footer>
