modifiche post correzione

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                     </div>
                     <!-- button dowload -->
                     <div class="pt-3">
-                        <button type="button" class="btn"><i class="fas fa-download"></i> Dowload</button>
+                        <a href="#" class="btn"><i class="fas fa-download"></i> Dowload</a> 
                     </div>
                 </div>
             </div>
